--- a/loop-iteration.yml
+++ b/loop-iteration.yml
@@ -1,15 +1,9 @@
 ---
-- name: Woking with loops in Ansible
-  hosts: localhost
-  gather_facts: false
+- hosts: localhost
+  become: true
   tasks:
-    - name: Echo the value
-      command: echo " {{ item }}"
-      loop:
-        - 1
-        - 2
-        - 3
-        - 4
-        - 5
-        - 6
-        
+    - name: create some test users
+      ansible.builtin.user:
+        name: "{{ item }}"
+        state: absent 
+      with_sequence: start=0 end=100 format=testuser%02x
