Adding User (satti) into DevSecOps group thru ansible on OS Level

--- a/create-group-with-multiple-users.yml
+++ b/create-group-with-multiple-users.yml
@@ -30,3 +30,4 @@
       loop:
         - { name: 'devops03', groups: fmcna }
         - { name: 'devops04', groups: fmcna }
+        - { name: 'satti', groups: devsecops }
